gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail19912d.d
version https://git-lfs.github.com/spec/v1
oid sha256:e23bd11b4b91160564c894d0a9049963ba99f8a20f835723eb7bc96e4c84fa6b
size 205
